Revision history for Perl extension Encode::ZapCP1252

0.33

0.32  2010-06-16T22:45:06
      - Fixed bug where `zap_cp1252` was failing to return a value when called
        in a list or scalar context.

0.31  2010-06-14T03:09:06
      - Fixed test failures on Perls less than 5.10.

0.30  2010-06-12T18:05:38
      - The conversion functions now ignore `undef` arguments and just return
        without doing anything.
      - Strings are no longer modifed in-place unless the conversion
        subroutines are called in a void context.
      - The conversion functions may optionally be called with no arugment
        when run in Perl 5.10 or higher, in which case they will instead act
        on `$_`.

0.20  2010-06-12T00:39:35
      - Added `local` to examples of changing the maping tables.
      - When the Encode module is insatlled, zapping and fixing CP1252
        gremlins now works in decoded strings, too.
      - For convenience, the functions now return the strings they've
        modified.
      - Shipping with a traditional `Makefile.PL` rather than one that
        passes through to Module::Build.
      - Moved repository to [GitHub](http://github.com/theory/encode-zapcp1252).

0.12  2008-06-23T17:48:04
      - Fixed pasto in the "Support" section of the docs.
      - Fixed a typo in the "Synopsis" section of the docs, thaks to David
        Beaudet.
      - Fixed the 5.6.2 requirement to be properly detected in Perl 5.5.
        Thanks to Slaven Rezic for the report.

0.11  2008-05-03T21:33:40
      - Removed bogus test.out file from the distribution. No idea how that
        got in there.
      - Added Module::Build to `build_requires` in Build.PL.
      - Fixed another Perl 5.6.2 test failure reported by David Cantrell.
      - Added Encode to the `recommends` parameter in Build.PL.

0.10  2008-05-02T18:32:27
      - Added `fix_cp1252()`, which converts CP1252 gremlins to their UTF-8
        equivalents.