@@ -1,6 +1,10 @@
 Revision history for Perl extension Encode::ZapCP1252
 
 0.33
+      - Require Test::Pod 1.41 to support `L<text|url>` syntax in the Pod.
+      - Support for decoded strings is supported only in 5.8.8 and higher due
+        to bugs in the handling of UTF-8 characters in regular expressions
+        prior to that release.
 
 0.32  2010-06-16T22:45:06
       - Fixed bug where `zap_cp1252` was failing to return a value when called
